@@ -11,6 +11,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -37,7 +38,7 @@ public class UserDetailsServiceImpl implements UserDetailsService {
     private List<SimpleGrantedAuthority> buildSimpleGrantedAuthorities(User user) {
         return user.getUserRoles().stream().
                 map(role -> new SimpleGrantedAuthority(
-                        role.getRole().getRoleType().name())).toList();
+                        role.getRole().getRoleType().name())).collect(Collectors.toList());
     }
 
 
